@startuml

title __MISC's Class Diagram__\n

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.CheckHolding {
          {static} + sendBundleChatMessage()
          {static} + sendChatMessage()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.LifeStealEnchantment {
          + LifeStealEnchantment()
          + getMaxLevel()
          + getMinPower()
          + onTargetDamaged()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.NeutrinoConfig {
          {static} + attackExcludedEntities : String[]
          {static} + damageSrcWhitelist : String[]
          + NeutrinoConfig()
          + isColdBiomeOff()
          + isColdBiomeOn()
          + isDuckOff()
          + isDuckOn()
          + isIFramesDefault()
          + isIFramesHalf()
          + isIFramesOff()
          + isLeavesOff()
          + isLeavesOn()
          + isRatOff()
          + isRatOn()
          - setDefault()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      enum Flags {
        Off
        On
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      enum IFlags {
        Default
        Half
        Off
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.NeutrinoFoodComponents {
          {static} + DEATH_CAP_MUSHROOM : DeathCapArtifact
          {static} + DIAMOND_APPLE : Item
          {static} + DIAMOND_CARROT : Item
          {static} + ENCHANTED_DIAMOND_APPLE : Item
          {static} + STONE_APPLE : Item
          {static} + WOOD_APPLE : Item
          {static} + registerFoods()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.NeutrinoModMenuIntegration {
          + getModConfigScreenFactory()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.SummonEvokerFangs {
          {static} + fromPolar()
          {static} + summonFangs()
          {static} - conjureFangs()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.WitherPotion {
          {static} + LONG_WITHER : Potion
          {static} + STRONG_WITHER : Potion
          {static} + WITHER : Potion
          {static} - RECIPES : Collection<RecipeToInit>
          {static} + init()
          - WitherPotion()
          {static} - mapPotions()
          {static} - register()
          {static} - register()
          {static} - variantRecipes()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace misc {
      class com.frostwizard4.Neutrino.misc.WitherPotion.RecipeToInit {
          - in : Potion
          - ingredient : Item
          - result : Potion
          + init()
          - RecipeToInit()
      }
    }
  }
  

  com.frostwizard4.Neutrino.misc.LifeStealEnchantment -up-|> net.minecraft.enchantment.Enchantment
  com.frostwizard4.Neutrino.misc.NeutrinoConfig .up.|> me.shedaniel.autoconfig.ConfigData
  com.frostwizard4.Neutrino.misc.NeutrinoConfig o-- com.frostwizard4.Neutrino.misc.NeutrinoConfig.Flags : coldBiomeMode
  com.frostwizard4.Neutrino.misc.NeutrinoConfig o-- com.frostwizard4.Neutrino.misc.NeutrinoConfig.IFlags : iFrames
  com.frostwizard4.Neutrino.misc.NeutrinoConfig o-- com.frostwizard4.Neutrino.misc.NeutrinoConfig.Flags : leavesMode
  com.frostwizard4.Neutrino.misc.NeutrinoConfig o-- com.frostwizard4.Neutrino.misc.NeutrinoConfig.Flags : spawnDuck
  com.frostwizard4.Neutrino.misc.NeutrinoConfig o-- com.frostwizard4.Neutrino.misc.NeutrinoConfig.Flags : spawnRat
  com.frostwizard4.Neutrino.misc.NeutrinoConfig +-down- com.frostwizard4.Neutrino.misc.NeutrinoConfig.Flags
  com.frostwizard4.Neutrino.misc.NeutrinoConfig +-down- com.frostwizard4.Neutrino.misc.NeutrinoConfig.IFlags
  com.frostwizard4.Neutrino.misc.NeutrinoModMenuIntegration .up.|> com.terraformersmc.modmenu.api.ModMenuApi
  com.frostwizard4.Neutrino.misc.WitherPotion +-down- com.frostwizard4.Neutrino.misc.WitherPotion.RecipeToInit


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
